# Gaudi-tutorials

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: bandit.yml
Lightning/DeepSpeed_Lightning/: DeepSpeed_Lightning.ipynb  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  train.py
Lightning/Finetune Transformers/: LICENSE  finetune-transformers.ipynb
Lightning/Introduction/: LICENSE  mnist-hello-world.ipynb
PyTorch/: Intel_Gaudi_Quick_Start_single.ipynb  RAG-on-Intel-Gaudi-single.ipynb  model_migrate_single.ipynb  stable_diffusion_v_2_1_single.ipynb
PyTorch/Detecting_Dynamic_Shapes/: Detecting_Dynamic_Shapes.ipynb  LICENSE  dyn_ops.py  dyn_ops2.py  dyn_ops3.py
PyTorch/DistilBERT IMDB/: distilbert_imdb.ipynb  gaudi_config.json
PyTorch/Fine_Tuning/: Intel_Gaudi_Fine_Tuning.ipynb
PyTorch/GPU_Migration/: GPU_Migration.ipynb
PyTorch/Getting_Started_with_vLLM/: Getting_Started_with_vLLM.ipynb
PyTorch/Hugging_Face_pipelines/: README.md  generation_pipeline.ipynb  image-classification.ipynb  translation.ipynb  visual-question-answering.ipynb
PyTorch/Inference/: Gaudi_inference_ex1.ipynb  Gaudi_inference_ex2.ipynb  Gaudi_inference_ex3.ipynb  Intel_Gaudi_Inference.ipynb  LICENSE
PyTorch/Intel_Gaudi_Quickstart/: Intel_Gaudi_Quick_Start.ipynb
PyTorch/Large_Model_DeepSpeed/: LICENSE  README.md  demo_ds.py  ds_config.json  ds_config_zero1.json  ds_config_zero1_ac.json  ds_config_zero2.json  ds_config_zero3.json  run_ds.sh  run_ds_zero1.sh  run_ds_zero1_ac.sh  run_ds_zero2.sh  run_ds_zero3.sh
PyTorch/Mixed Precision/: LICENSE  pt_autocast.ipynb  pt_hmp.ipynb
PyTorch/Pre_Training/: Intel_Gaudi_Pretraining.ipynb  LICENSE
PyTorch/Profiling_and_Optimization/: New_Profiler_and_Optimization.ipynb  Profiler_and_Optimization.ipynb  model_profiling_and_optimization_tutorial.ipynb
PyTorch/RAG_Application/: LICENSE  RAG-on-Intel-Gaudi.ipynb  requirements.txt
PyTorch/automation/: Dockerfile  (+3 more)
automation/: CONTRIBUTING.md  README.md  docker_build.sh  run_test.sh
k8s/: vllm-8b-cache 1.yaml  vllm-8b-cache-1-21.yaml
langchain/: README.md
(+3436 files in other folders)
